typhon-cluster/apps/qbittorrent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - qbittorrent.buildwithcaleb.com
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 8080
